fix: horizontal align top of Sidebar and Main

--- a/src/frontend/item-page/index.module.css
+++ b/src/frontend/item-page/index.module.css
@@ -155,6 +155,7 @@
 }
 
 .parentTitle {
+  padding-bottom: 1rem;
   font-size: .8rem;
   cursor: pointer;
 }
@@ -373,8 +374,6 @@ a.link:hover {
 }
 
 .parentContainer {
-  padding: 1rem 0;
-
 }
 
 .roomID {
